# DS_CP

./: .gitignore  api.py  cli.py  dag_manager.py  heap.py  main.py  report.py  requirements.txt  scheduler.py  task.py
cpp_backend/: CMakeLists.txt  README.md
cpp_backend/.cache/clangd/index/: dag_manager.cpp.544EB4AD360E1755.idx  dag_manager.h.3F75B238A15D5254.idx  heap.cpp.64E68AA3FDDF728A.idx  heap.h.6E0CC0E49B2E94DE.idx  main.cpp.4B6BFB275D0E8704.idx  report.cpp.329C52503DAC50E9.idx  report.h.A432C0D87F049332.idx  scheduler.cpp.8348246903BAC8E0.idx  scheduler.h.AC8EBFCDD4C31278.idx  task.cpp.7D649AC7AB3E0D09.idx  task.h.6E747BFFFA35BB34.idx
cpp_backend/include/: dag_manager.h  heap.h  report.h  scheduler.h  task.h
cpp_backend/src/: dag_manager.cpp  heap.cpp  main.cpp  report.cpp  scheduler.cpp  task.cpp
frontend/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Navbar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Dependencies.tsx  Logs.tsx  Reports.tsx  Scheduler.tsx  Settings.tsx  Tasks.tsx
gui/: __init__.py  app.py  dashboard.py  dependency_page.py  logs_page.py  report_page.py  scheduler_page.py  settings_page.py  task_page.py
gui/components/: sidebar.py
